# taller-1-fiuba-rust

./: Cargo.toml  README.md  nodo.conf
src/: config.rs  controller.rs  file_utils.rs  interfaz.rs  logger.rs  main.rs  node.rs  peer_mock.rs  wallet.rs
src/interfaz/: account_dialog.rs  account_selector.rs  check_poi_stack.rs  glade1.glade  overview_stack.rs  send_stack.rs  transactions_stack.rs
src/node/: block_downloader.rs  block_processing.rs  message.rs  node_server.rs  p2pkh.rs  peer_discoverer.rs  peer_listener.rs  storage.rs  stream_handler.rs  sync.rs  tx_broadcaster.rs  utxo.rs
src/node/message/: addr.rs  block.rs  compact_size.rs  filter_clear.rs  filter_load.rs  get_blocks.rs  get_data.rs  get_headers.rs  headers.rs  inv.rs  merkle_block.rs  message_header.rs  messages_handler.rs  ping.rs  pong.rs  send_headers.rs  tx.rs  ver_ack.rs  version.rs
src/node/message/block/: block_header.rs  transaction.rs
src/node/message/block/transaction/: transaction_input.rs  transaction_output.rs
src/wallet/: merkle.rs
