[package]
name = "bitcoin_node_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bitcoin_hashes = "0.12.0"
murmur3 = "0.5.2"
chrono = "0.4.24"
hexdump = "0.1.1"
rand = "0.8.5"
gtk = "0.14.0"
bs58 = "0.4.0"
secp256k1 = "0.27.0"
